[package]
name = "v-common-storage"
version = "0.1.5"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.1"
log = "0.4"
v_rusty_tarantool = "0.1.5"
tokio = "0.1"
lmdb-rs-m = "0.7.7"
nng = "0.5.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-ini = "0.16"

v_onto = { package = "v-common-onto", version = "0.1.1" }
